--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,11 +1,14 @@
 version: 2
 updates:
-  - package-ecosystem: "gomod"
-    directory: "/"
+  - package-ecosystem: gomod
+    directory: /
     schedule:
-      interval: "weekly"
-    allow: all
-    assignees: Frank-Mayer
-    reviewers: Frank-Mayer
+      interval: weekly
+    allow:
+      - all
+    assignees:
+      - Frank-Mayer
+    reviewers:
+      - Frank-Mayer
     target-branch: dev
     versioning-strategy: increase
