dependabot allow dependency-type

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,10 +5,9 @@ updates:
     schedule:
       interval: weekly
     allow:
-      - all
+      - dependency-type: all
     assignees:
       - Frank-Mayer
     reviewers:
       - Frank-Mayer
     target-branch: dev
-    versioning-strategy: increase
