--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Setup Go environment
         uses: actions/setup-go@v4.1.0
         with:
-          go-version: ">=1.22.0"
+          go-version: stable
           cache: true
           architecture: x64
       - name: Checkout
@@ -52,7 +52,7 @@ jobs:
       - name: Setup Go environment
         uses: actions/setup-go@v4.1.0
         with:
-          go-version: ">=1.22.0"
+          go-version: stable
           cache: true
           architecture: x64
       - name: Checkout
@@ -68,7 +68,7 @@ jobs:
       - name: Setup Go environment
         uses: actions/setup-go@v4.1.0
         with:
-          go-version: ">=1.22.0"
+          go-version: stable
           cache: true
           architecture: x64
       - name: Checkout
@@ -85,7 +85,7 @@ jobs:
       - name: Setup Go environment
         uses: actions/setup-go@v4.1.0
         with:
-          go-version: ">=1.22.0"
+          go-version: stable
           cache: true
           architecture: x64
       - name: Checkout
