--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Setup Go environment
         uses: actions/setup-go@v4.1.0
         with:
-          go-version: ">=1.22.0"
+          go-version: stable
           cache: true
           architecture: x64
       - name: Checkout
