--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -34,8 +34,8 @@ jobs:
         uses: actions/checkout@v4
       - name: Check for version change
         run: |
-          go run . -v
-          current=v$(go run . -v 2>&1)
+          go run . version
+          current=v$(go run . version)
           tags=$(curl https://api.github.com/repos/Frank-Mayer/yab/tags)
           latest=$(echo $tags | jq -r '.[0].name')
           if [ "$current" = "$latest" ]; then
@@ -95,7 +95,7 @@ jobs:
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
           echo "setup git complete"
-          go run . -v
-          current=v$(go run . -v 2>&1)
+          go run . version
+          current=v$(go run . version)
           git tag -a $current -m "Release $current"
           git push origin $current
