ci: manually tag

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,15 @@
+# yaml-language-server: https://raw.githubusercontent.com/SchemaStore/schemastore/master/src/schemas/json/github-workflow.json
+---
 name: Test
 
 on:
+  push:
+    branches:
+      - "main"
+    paths:
+      - "**.go"
+      - "go.mod"
+      - "go.sum"
   pull_request:
     branches:
       - main
@@ -13,6 +22,36 @@ on:
 jobs:
   test-mac:
     runs-on: macos-latest
+    steps:
+      - name: Setup Go environment
+        uses: actions/setup-go@v5
+        with:
+          go-version: stable
+          cache: true
+          architecture: x64
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Build
+        run: go build ./...
+      - name: Test
+        run: go test ./... -v
+  test-win:
+    runs-on: windows-latest
+    steps:
+      - name: Setup Go environment
+        uses: actions/setup-go@v5
+        with:
+          go-version: stable
+          cache: true
+          architecture: x64
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Build
+        run: go build ./...
+      - name: Test
+        run: go test ./... -v
+  test-linux:
+    runs-on: ubuntu-latest
     steps:
       - name: Setup Go environment
         uses: actions/setup-go@v5
